# YOPO_ros2

./: .gitignore  README.md
mavros_msgs/: CMakeLists.txt  package.xml
quadrotor_msgs/: CMakeLists.txt  package.xml
quadrotor_msgs/src/: decode_msgs.cpp  encode_msgs.cpp
quadrotor_msgs/src/quadrotor_msgs/: _corrections.py  _lqr_trajectory.py  _output_data.py  _position_command.py  _ppr_output_data.py  _so3_command.py
simulator/: CMakeLists.txt  package.xml
simulator/config/: config.yaml
simulator/include/: maps.hpp  perlinnoise.hpp  sensor_simulator.hpp
simulator/src/: dataset_generator.cpp  maps.cpp  sensor_simulator.cpp  test_simulator_cuda.cpp
so3_control/: CMakeLists.txt  package.xml
so3_control/include/so3_control/: HGDO.hpp  NetworkControl.hpp  SO3Control.hpp  mavros_interface.hpp
so3_control/src/: NetworkControl.cpp  SO3Control.cpp
so3_quadrotor_simulator/: CMakeLists.txt  package.xml
so3_quadrotor_simulator/include/quadrotor_simulator/: Quadrotor.hpp
so3_quadrotor_simulator/include/uav_utils/: converters.hpp  geometry_utils.hpp  utils.hpp
so3_quadrotor_simulator/launch/: so3_quadrotor_simulator.launch.py
so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
so3_quadrotor_simulator/src/dynamics/: quadrotor.cpp
yopo/: package.xml  setup.cfg  setup.py
yopo/config/: traj_opt.yaml
yopo/control_msg/: PositionCommand.py  __init__.py
yopo/loss/: guidance_loss.py  safety_loss.py
yopo/policy/: poly_solver.py  state_transform.py  yopo_dataset.py  yopo_trainer.py
yopo/saved/YOPO_2/: events.out.tfevents.1751275198.legion-Lenovo-Legion-Y70002021.22473.0
yopo/yopo/: test_yopo_ros2.py  train_yopo.py
